# robert-server/robert-server-ws-rest/src/main/java/fr/gouv/stopc/robertserver/ws/service/impl/CaptchaServiceImpl.java
@@ -12,12 +12,10 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import fr.gouv.stopc.robert.server.common.service.IServerConfigurationService;
 import fr.gouv.stopc.robertserver.ws.dto.CaptchaDto;
 import fr.gouv.stopc.robertserver.ws.service.CaptchaService;
 import fr.gouv.stopc.robertserver.ws.utils.PropertyLoader;
@@ -30,26 +28,18 @@ public class CaptchaServiceImpl implements CaptchaService {
 
 	private RestTemplate restTemplate;
 
-	private IServerConfigurationService serverConfigurationService;
-
 	private PropertyLoader propertyLoader;
 
 	@Inject
 	public CaptchaServiceImpl(RestTemplate restTemplate,
-							  IServerConfigurationService serverConfigurationService,
 							  PropertyLoader propertyLoader) {
 
 		this.restTemplate = restTemplate;
-		this.serverConfigurationService = serverConfigurationService;
 		this.propertyLoader = propertyLoader;
 	}
 
 	@Override
 	public boolean verifyCaptcha(final RegisterVo registerVo) {
-
-		// This part of the code should be removed before any public use. For security reason.
-		// TODO: remove this as far as it is no more needed for test.
-		if (this.hasMagicNumber(registerVo)) return true;
 
 		return Optional.ofNullable(registerVo).map(RegisterVo::getCaptcha).map(captcha -> {
 
@@ -84,31 +74,12 @@ public class CaptchaServiceImpl implements CaptchaService {
 		return headers;
 	}
 
-	/**
-	 *
-	 * Method checks if captcha in RegisterVo should be ignore.
-	 * This part of the code should be removed before any public use. For security reason.
-	 * TODO: Remove this as far as it is no more needed for tests
-	 */
-	private boolean hasMagicNumber(RegisterVo registerVo) {
-
-		return Optional.ofNullable(registerVo).map(RegisterVo::getCaptcha).map(
-				captcha -> {
-					if(!StringUtils.isEmpty(this.propertyLoader.getMagicNumber())) {
-						return this.propertyLoader.getMagicNumber().equals(captcha);
-					} else{
-						return false;
-					}
-				}
-		).orElse(false);
-	}
-
 	private boolean isSuccess(CaptchaDto captchaDto, Date sendingDate) {
 
 		return this.propertyLoader.getCaptchaHostname().equals(captchaDto.getHostname())
 				&& Math.abs(sendingDate.getTime()
 						- captchaDto.getChallengeTimestamp()
-									.getTime()) <= this.serverConfigurationService.getCaptchaChallengeTimestampTolerance()
+									.getTime()) <= this.propertyLoader.getCaptchaChallengeTimestampTolerance()
 											* 1000L;
 	}
 
